numpy_exercises solved

--- a/Module5-NumPy/numpy_exercises.ipynb
+++ b/Module5-NumPy/numpy_exercises.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -111,7 +111,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[38 43 19 26 45 16 34 44 18 23]\n"
+      "[45 15 39 43 44 11 32 22 44 18]\n"
      ]
     }
    ],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -141,7 +141,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[23 18 44 34 16 45 26 19 43 38]\n"
+      "[18 44 22 32 11 44 43 39 15 45]\n"
      ]
     }
    ],
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -170,9 +170,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[4 8 8]\n",
-      " [4 7 8]\n",
-      " [5 5 7]] (3, 3)\n"
+      "[[0 7 2]\n",
+      " [4 5 0]\n",
+      " [0 3 4]] (3, 3)\n"
      ]
     }
    ],
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {
     "tags": []
    },
@@ -229,17 +229,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[96 17 65]\n",
-      "  [74  3 25]\n",
-      "  [95 56 88]]\n",
+      "[[[74 16 22]\n",
+      "  [70 52 87]\n",
+      "  [60 50  0]]\n",
       "\n",
-      " [[51 93 17]\n",
-      "  [69 42  8]\n",
-      "  [41  5 92]]\n",
+      " [[23 42 50]\n",
+      "  [24 58 66]\n",
+      "  [ 9 47 93]]\n",
       "\n",
-      " [[59  3 47]\n",
-      "  [68  3 34]\n",
-      "  [87 12 68]]] (3, 3, 3)\n"
+      " [[12 83 39]\n",
+      "  [81  9 46]\n",
+      "  [ 4  0 58]]] (3, 3, 3)\n"
      ]
     }
    ],
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -269,16 +269,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 50  36  71  69  39  48  77 100  35  77]\n",
-      " [  0  45  90  50  29  73  34  25  13  94]\n",
-      " [ 18  85  33  89  81   3  43  70  45  63]\n",
-      " [ 50  92  93  78  16  69  13  87  90   5]\n",
-      " [ 62  90  68  88  60  47  78  37   4  90]\n",
-      " [ 60  60  92  87   1  51  24  13  87  41]\n",
-      " [ 59  11  95  94   3  24  59  97  82  85]\n",
-      " [ 27  95  32   6  86  23  73   7  17   5]\n",
-      " [ 73   8  11   4   3  48  59  15  98  63]\n",
-      " [ 36  98  41  44  82  74  86  52   2  94]] (10, 10)\n",
+      "[[ 59  43  80  88   7  43  39  52  97  47]\n",
+      " [ 90  16  52  63  30  66  72  38  76  97]\n",
+      " [ 14  52 100  29  51  86  49  33  56  69]\n",
+      " [ 34   5  30  58   0  82  71  18  95  53]\n",
+      " [  4  13  10  85  49  52  77  38  50  82]\n",
+      " [ 12  90  75  25  87  40   8   2  97   5]\n",
+      " [ 15  54  91  42  82  88  25  47  64   3]\n",
+      " [  9  36  52   7  42  83  38  78   5  13]\n",
+      " [ 46  22  62   7  79  33  92   4  89  41]\n",
+      " [ 10  25  89  96  52  98  79  96  74   9]] (10, 10)\n",
       "min = 0, max = 100\n"
      ]
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -310,9 +310,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[58 44 63  3 31 18 88 23 40 75 54 65 67 77 67  9 95 77 71 66 25 82 45 24\n",
-      "  9 43 83 36 42 18] 30\n",
-      "mean = 49.93333333333333\n"
+      "[  7  99  50  76  36  39 100  70  86  42  83  61  10  30  53  62  53  28\n",
+      "   0  88  38   0  63  59  18  27  26  10   0  49] 30\n",
+      "mean = 45.43333333333333\n"
      ]
     }
    ],
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -377,12 +377,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0  0  0  0  0  0]\n",
-      " [ 0 44 91 55  6  0]\n",
-      " [ 0 38 40 42 43  0]\n",
-      " [ 0 37 73 31 79  0]\n",
-      " [ 0 93 84 35 37  0]\n",
-      " [ 0  0  0  0  0  0]]\n"
+      "[[  0   0   0   0   0   0]\n",
+      " [  0  46   2  20  22   0]\n",
+      " [  0  97  78  94  79   0]\n",
+      " [  0  39  13  90 100   0]\n",
+      " [  0  10  29  76  98   0]\n",
+      " [  0   0   0   0   0   0]]\n"
      ]
     }
    ],
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -454,10 +454,10 @@
      "output_type": "stream",
      "text": [
       "[[0 0 0 0 0]\n",
-      " [2 0 0 0 0]\n",
-      " [3 3 0 0 0]\n",
-      " [3 1 4 0 0]\n",
-      " [1 3 2 3 0]]\n"
+      " [3 0 0 0 0]\n",
+      " [4 4 0 0 0]\n",
+      " [4 1 1 0 0]\n",
+      " [3 3 3 3 0]]\n"
      ]
     }
    ],
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -490,7 +490,7 @@
        "(1, 5, 4)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -520,7 +520,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "268.52001787576285\n"
+      "279.3313444638822\n"
      ]
     }
    ],
@@ -532,24 +532,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[33 99 39 50 67]\n",
-      " [10 97 99 95 56]\n",
-      " [89 21  4 35 79]\n",
-      " [79  5 16 53 94]\n",
-      " [55 39 47 92 19]] \n",
+      "[[57 45 38 27 87]\n",
+      " [10 39 98 48 39]\n",
+      " [ 4 19 34 96 53]\n",
+      " [81 90  6 80 34]\n",
+      " [ 8 65 46 18 94]] \n",
       "\n",
-      "[[0.11458333 0.34375    0.13541667 0.17361111 0.23263889]\n",
-      " [0.0280112  0.27170868 0.27731092 0.26610644 0.15686275]\n",
-      " [0.39035088 0.09210526 0.01754386 0.15350877 0.34649123]\n",
-      " [0.31983806 0.02024291 0.06477733 0.2145749  0.3805668 ]\n",
-      " [0.21825397 0.1547619  0.18650794 0.36507937 0.07539683]]\n"
+      "[[0.22440945 0.17716535 0.1496063  0.10629921 0.34251969]\n",
+      " [0.04273504 0.16666667 0.41880342 0.20512821 0.16666667]\n",
+      " [0.01941748 0.09223301 0.16504854 0.46601942 0.25728155]\n",
+      " [0.27835052 0.30927835 0.02061856 0.27491409 0.11683849]\n",
+      " [0.03463203 0.28138528 0.1991342  0.07792208 0.40692641]]\n"
      ]
     }
    ],
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -773,8 +773,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 20  70  30 100  78  83  11  44  90  80]\n",
-      "[ 11  20  30  44  70  78  80  83  90 100]\n"
+      "[70  1 46 40 29 95 79 80 81 64]\n",
+      "[ 1 29 40 46 64 70 79 80 81 95]\n"
      ]
     }
    ],
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -806,7 +806,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[4 0 1 5 5] [5 1 1 0 5]\n",
+      "[4 5 0 3 5] [0 4 1 4 5]\n",
       "False\n"
      ]
     }
@@ -827,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -839,8 +839,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[6 4 4 3 0 2 0 2 5 8]\n",
-      "[6 4 4 3 0 2 0 2 5 0]\n"
+      "[ 9  3  5  5  0  6 10  5  0  5]\n",
+      "[9 3 5 5 0 6 0 5 0 5]\n"
      ]
     }
    ],
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -873,8 +873,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[73 48 11 70 76 43 52 65 71 37]\n",
-      "43\n"
+      "[25 70 54 11 73 61  8 52 33  2]\n",
+      "33\n"
      ]
     }
    ],
@@ -898,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -931,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -943,12 +943,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 2  2 10]\n",
-      " [ 0  3  4]\n",
-      " [10  0  0]]\n",
-      "[[ 0  0  0]\n",
-      " [ 2  2  4]\n",
-      " [10  3 10]]\n"
+      "[[ 3 10  4]\n",
+      " [ 7  4  5]\n",
+      " [ 5  7  6]]\n",
+      "[[ 3  4  4]\n",
+      " [ 5  7  5]\n",
+      " [ 7 10  6]]\n"
      ]
     }
    ],
@@ -969,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1004,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 64,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1013,22 +1013,19 @@
    },
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "cannot copy sequence with size 3 to array axis with dimension 5",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-126-54426d9b0245>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0marr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mzeros\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0marr\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mzeros\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: cannot copy sequence with size 3 to array axis with dimension 5"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 0 0 0 2 0 0 0 3 0 0 0 4 0 0 0 5]\n"
      ]
     }
    ],
    "source": [
     "arr = np.array([1,2,3,4,5])\n",
-    "zeros = [0,0,0]\n",
-    "arr[::1] = zeros\n",
-    "print(arr)"
+    "inter_arr = np.zeros((3 * arr.size), dtype='int64')\n",
+    "idx = tuple(range(0,inter_arr.size,3)) \n",
+    "inter_arr = np.insert(inter_arr, idx, arr)[np.s_[:-3]]\n",
+    "print(inter_arr)"
    ]
   },
   {
@@ -1040,15 +1037,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]] \n",
+      "\n",
+      "\n",
+      "[[7 8 9]\n",
+      " [4 5 6]\n",
+      " [1 2 3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array([[1,2,3],[4,5,6],[7,8,9]])\n",
+    "print(arr,\"\\n\\n\")\n",
+    "arr[[0,2]] = arr[[2,0]]  # arr[[0,2]] is equivalent to arr[[0,2], :] so a submatrix \n",
+    "                         # consisting of rows 0 and 2 are selected.\n",
+    "print(arr)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1059,15 +1077,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False False  True False  True]\n",
+      "[-5.5  6.6  7.7 -2.1  3.3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array([True, True, False, True, False])\n",
+    "np.logical_not(arr, out=arr)\n",
+    "print(arr)\n",
+    "\n",
+    "arr = np.array([5.5, -6.6, -7.7, 2.1, -3.3])\n",
+    "np.negative(arr, out=arr)\n",
+    "print(arr)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1078,15 +1113,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  9   5  -2   1  -7   9  -6   9  -2   5]\n",
+      " [  0   9 -10  -3   5   7   7 -10  -9  -3]\n",
+      " [  2   6 -10  -7   0  -9  -4  -3   3  -9]\n",
+      " [ -7  -5   7  -7  10  -8   3   2 -10  -1]\n",
+      " [-10  -2   5   4   4   0   2 -10   6  -1]\n",
+      " [ -5 -10   5  -9   8 -10  -9  -7  -2   0]\n",
+      " [  8   5  -2   1   3   0   9   0  -4  -2]\n",
+      " [  1  -7   2  -6  -8  -8   0   8  -1  -5]\n",
+      " [  7   7  -1  -9   0   2  -4   7   1  -3]\n",
+      " [ -5   4  -1  10 -10  -9 -10   4   7  10]]\n",
+      "Most frequent value in the array is -10\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.random.randint(-10, 11, size=(10,10))\n",
+    "print(arr)\n",
+    "\n",
+    "values, counts = np.unique(arr, return_counts=True)\n",
+    "most_freq_idx = counts.argmax()\n",
+    "print(f\"Most frequent value in the array is {values[most_freq_idx]}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1097,15 +1157,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[42 14 33 37 21 42 23 27 34 22  4 35 37 20 16 17  2 16 17 19 41 22 33 37\n",
+      " 28 33 33 16 36 27 38 39 11 43  7 11 20 15 45 20  8 14 30 48 21 25 11 38\n",
+      " 32 46 36 43 42 23 35 26 42 19 40 40 24 32 32 24 44 50 27 25 30 13 45  7\n",
+      " 24 16 17  1 37 32  6 34 23 26 12 34 13  4 31 35 10  2 30 43 15 48 46  6\n",
+      "  6 37 46 36]\n",
+      "[46 46 48 48 50]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.random.randint(0, 51, size=100)\n",
+    "print(arr)\n",
+    "\n",
+    "max_vals = np.sort(arr)[-5:]\n",
+    "print(max_vals)\n",
+    "\n",
+    "# Note: for n largest UNIQUE values use np.unique before sorting."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1116,15 +1197,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]\n",
+      " [1 2 3]\n",
+      " [4 5 6]\n",
+      " [0 0 0]]\n",
+      "[[0 0 0]\n",
+      " [1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array([[1,2,3],[4,5,6],[7,8,9],[1,2,3],[4,5,6],[0,0,0]])\n",
+    "print(arr)\n",
+    "print(np.unique(arr, axis=0))"
+   ]
   }
  ],
  "metadata": {
