bayes_theorem_exercise solved

--- a/Module7-ProbandStats/Module7.ipynb
+++ b/Module7-ProbandStats/Module7.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a6cfca10",
+   "id": "5939c0f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2121fc0b",
+   "id": "fe11f1bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,13 +26,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "02df0931",
+   "id": "cd816091",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6276980040209071"
+       "0.2830691936484757"
       ]
      },
      "execution_count": 3,
@@ -48,13 +48,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2edf6d23",
+   "id": "decdab4b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.63273476, 0.29276825, 0.30962696, 0.31956963])"
+       "array([0.02292703, 0.13822546, 0.02104955, 0.00210819])"
       ]
      },
      "execution_count": 4,
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d390fcb4",
+   "id": "97625811",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "571a0326",
+   "id": "3443d8d3",
    "metadata": {},
    "source": [
     "### Binomial Disribution"
@@ -90,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ad7a49c0",
+   "id": "5c9b8b20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5cb5fd5c",
+   "id": "dfe34fcf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b4b67bdd",
+   "id": "f2fb9b20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "48e7394d",
+   "id": "7d91c800",
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9ddd778",
+   "id": "22d5c46f",
    "metadata": {},
    "source": [
     "### Normal Distribution"
@@ -164,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "6d288524",
+   "id": "a949184f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "da9a6273",
+   "id": "adc230d6",
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f02fb57b",
+   "id": "c52fe7b8",
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "8ed36fd2",
+   "id": "0c0c9606",
    "metadata": {},
    "outputs": [
     {
@@ -265,12 +265,141 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2dc0502f",
+   "metadata": {},
+   "source": [
+    "### Conditional Probability: Soccer Game Example"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7fc0b330",
+   "execution_count": 14,
+   "id": "4e7f187d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# how many times we run the simulation\n",
+    "n_runs = 100000\n",
+    "\n",
+    "# initialize variables\n",
+    "SAM = 0\n",
+    "SAM_YES = 0\n",
+    "SAM_NO = 0\n",
+    "ALEX = 0\n",
+    "ALEX_YES = 0\n",
+    "ALEX_NO = 0\n",
+    "YES = 0\n",
+    "NO = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "f243afe8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# process simulation\n",
+    "for _ in range(n_runs):\n",
+    "    # Sam (probability of Sam being the coach)\n",
+    "    if np.random.random() < 0.6: \n",
+    "        SAM += 1\n",
+    "\n",
+    "        # YES\n",
+    "        if np.random.random() < 0.5:\n",
+    "            SAM_YES += 1\n",
+    "            YES +=1\n",
+    "\n",
+    "        # NO\n",
+    "        else:\n",
+    "            SAM_NO += 1\n",
+    "            NO += 1\n",
+    "\n",
+    "    #Alex (probability of Alex being the coach)\n",
+    "    else:\n",
+    "        ALEX += 1\n",
+    "\n",
+    "        # YES\n",
+    "        if np.random.random() < 0.3:\n",
+    "            ALEX_YES += 1\n",
+    "            YES += 1\n",
+    "\n",
+    "        # NO\n",
+    "        else:\n",
+    "            ALEX_NO += 1\n",
+    "            NO +=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "621027a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create probabilities\n",
+    "P_SAM = SAM / n_runs * 100\n",
+    "P_SAM_YES = SAM_YES / n_runs * 100\n",
+    "P_SAM_NO = SAM_NO / n_runs * 100\n",
+    "P_ALEX = ALEX / n_runs * 100\n",
+    "P_ALEX_YES = ALEX_YES / n_runs * 100\n",
+    "P_ALEX_NO = ALEX_NO / n_runs * 100\n",
+    "P_YES = YES / n_runs * 100\n",
+    "P_NO = NO / n_runs * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "0ea7b4ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sam is the coach: 60.089000000000006%\n",
+      "Sam is the coach and you are the goalkeeper: 30.15%\n",
+      "Sam is the coach and you are not the goalkeeper: 29.939%\n",
+      "Alex is the coach: 39.911%\n",
+      "Alex is the coach and you are the goalkeeper: 12.073%\n",
+      "Alex is the coach and you are not the goalkeeper: 27.838%\n",
+      "You are the goalkeeper: 42.223%\n",
+      "You are not the goalkeeper: 57.777%\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Sam is the coach: {P_SAM}%')\n",
+    "print(f'Sam is the coach and you are the goalkeeper: {P_SAM_YES}%')\n",
+    "print(f'Sam is the coach and you are not the goalkeeper: {P_SAM_NO}%')\n",
+    "print(f'Alex is the coach: {P_ALEX}%')\n",
+    "print(f'Alex is the coach and you are the goalkeeper: {P_ALEX_YES}%')\n",
+    "print(f'Alex is the coach and you are not the goalkeeper: {P_ALEX_NO}%')\n",
+    "print(f'You are the goalkeeper: {P_YES}%')\n",
+    "print(f'You are not the goalkeeper: {P_NO}%')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "eb8bf1cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7140657935248561\n"
+     ]
+    }
+   ],
+   "source": [
+    "# P(Sam | goalkeeper)\n",
+    "P_SAM_GOAL = P_SAM_YES / P_YES\n",
+    "print(P_SAM_GOAL)"
+   ]
   }
  ],
  "metadata": {
